policies/best-practices/require-resource-requests.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: be-app-aws-node-termination-handler
spec:
  validationFailureAction: audit
  background: false
  rules:
  - name: enforce-non-root
    match:
      resources:
        kinds:
        - Pod
    validate:
      message: "Containers must run as non-root"
      pattern:
        spec:
          containers:
          - securityContext:
              runAsNonRoot: true
  - name: enforce-privileged-false
    match:
      resources:
        kinds:
        - Pod
    validate:
      message: "Containers must not run in privileged mode"
      pattern:
        spec:
          containers:
          - securityContext:
              allowPrivilegeEscalation: false
  - name: enforce-host-network-true
    match:
      resources:
        kinds:
        - Pod
    validate:
      message: "Host network must enable"
      pattern:
        spec:
          hostNetwork: true
